force-app/main/default/objects/Account/fields/OW_household_dashboard_activation_status__c.field-meta.xml
<CustomField>
    <fullName>OW_household_dashboard_activation_status__c</fullName>
    <description>Temporary field for resolving portal and Salesforce data sync issues.</description>
    <formula>TEXT( Household_Lookup__r.Dashboard_Visibility__c )</formula>
    <label>Household dashboard activation status</label>
    <type>Text</type>
</CustomField>