force-app/main/default/objects/Account/fields/OW_household_status__c.field-meta.xml
<CustomField>
    <fullName>OW_household_status__c</fullName>
    <description>Temporary field to show the household status on the person account.</description>
    <formula>TEXT( Household_Lookup__r.FinServ__Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household status</label>
    <type>Text</type>
</CustomField>