force-app/main/default/objects/Account/fields/OW_Portal_Activated__c.field-meta.xml
<CustomField>
    <fullName>OW_Portal_Activated__c</fullName>
    <label>Portal Activation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activation Email Sent</fullName>
            </value>
            <value>
                <fullName>Activation Email Expired</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>