force-app/main/default/objects/Account/fields/OW_role_in_primary_household__c.field-meta.xml
<CustomField>
    <fullName>OW_role_in_primary_household__c</fullName>
    <description>This field will be updated by a flow to reflect this person&#39;s role on the primary household.</description>
    <label>Role in primary household</label>
    <length>255</length>
    <type>Text</type>
</CustomField>