force-app/main/default/objects/Account/fields/OW_share_with_cats_until__c.field-meta.xml
<CustomField>
    <fullName>OW_share_with_cats_until__c</fullName>
    <description>This field is used to record when a household should be visible to CATS, the external compliance team, until. If populated, it triggers sharing of the household via a sharing rule. Used as planners need to share households but do not have access to manual sharing as they do not own the accounts to be shared.</description>
    <inlineHelpText>If populated, CATS have access to this household and its snapshots. To remove access, clear this field. If the date is in the past, CATS still have access.</inlineHelpText>
    <label>Share with CATS until</label>
    <type>Date</type>
</CustomField>