force-app/main/default/objects/Account/fields/OW_sub_status__c.field-meta.xml
<CustomField>
    <fullName>OW_sub_status__c</fullName>
    <description>Within party status model, we need to capture a more granular status.</description>
    <label>Sub-status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FinServ__Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scope Signed</fullName>
            </value>
            <value>
                <fullName>Pre-TOB</fullName>
            </value>
            <value>
                <fullName>Post-TOB</fullName>
            </value>
            <value>
                <fullName>Data gathering</fullName>
            </value>
            <value>
                <fullName>Risk call</fullName>
            </value>
            <value>
                <fullName>Prepare advice</fullName>
            </value>
            <value>
                <fullName>Present advice</fullName>
            </value>
            <value>
                <fullName>Await decision</fullName>
            </value>
            <value>
                <fullName>In fulfilment</fullName>
            </value>
            <value>
                <fullName>Suitability declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>