force-app/main/default/objects/Account/fields/OW_terms_of_Business_Status__c.field-meta.xml
<CustomField>
    <fullName>OW_terms_of_Business_Status__c</fullName>
    <description>The status of Terms of Business records which are to be signed by a customer. Applies to people only.</description>
    <label>Terms of business status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Accepted</fullName>
            </value>
            <value>
                <fullName>Awaiting acceptance</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>