force-app/main/default/objects/Account/fields/Pensions__c.field-meta.xml
<CustomField>
    <fullName>Pensions__c</fullName>
    <description>Amount person puts into their pension</description>
    <label>Pensions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>