force-app/main/default/objects/Account/fields/Pensions_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Pensions_Frequency__c</fullName>
    <description>Frequency person puts the specified amount into their pension</description>
    <label>Pensions frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>