force-app/main/default/objects/Account/fields/PensionsSavingsMonthly__c.field-meta.xml
<CustomField>
    <fullName>PensionsSavingsMonthly__c</fullName>
    <description>Takes the pensions saving at any frequency and returns monthly value</description>
    <formula>IF(  ISPICKVAL(Pensions_Frequency__c ,&quot;Weekly&quot;), 52*Pensions__c/12,
IF(  ISPICKVAL(Pensions_Frequency__c ,&quot;Monthly&quot;), Pensions__c,
IF(  ISPICKVAL(Pensions_Frequency__c ,&quot;Annually&quot;), Pensions__c/12,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pensions Savings (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>