force-app/main/default/objects/Account/fields/Permission_to_sign_documents__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_sign_documents__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this indicated that the client has given up permission to sign documents on their behalf.</inlineHelpText>
    <label>zUnused - Permission to sign documents</label>
    <type>Checkbox</type>
</CustomField>