force-app/main/default/objects/Account/fields/PipedriveID__c.field-meta.xml
<CustomField>
    <fullName>PipedriveID__c</fullName>
    <description>ID of related record on Pipedrive</description>
    <externalId>true</externalId>
    <label>Pipedrive ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>