force-app/main/default/objects/Account/fields/Planning_to_have_more_children__c.field-meta.xml
<CustomField>
    <fullName>Planning_to_have_more_children__c</fullName>
    <description>Specifies if the household / person is planning to have more children</description>
    <label>Planning to have (more) children?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>