force-app/main/default/objects/Account/fields/PlatformCreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformCreatedDateTime__c</fullName>
    <description>To record when the account record was created on the platform</description>
    <label>Platform created date time</label>
    <type>DateTime</type>
</CustomField>