force-app/main/default/objects/Account/fields/PlatformLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedBy__c</fullName>
    <description>Records the ID of the person that last modified this record. The value will either be a user ID or the ID of a person account belonging to a customer who made the update via the portal. Only updated with each platform update - i.e. the Salesforce last modified by field could supersede the value here.</description>
    <label>Platform last modified by</label>
    <length>18</length>
    <type>Text</type>
</CustomField>