force-app/main/default/objects/Account/fields/Portal_Status_Last_Change__c.field-meta.xml
<CustomField>
    <fullName>Portal_Status_Last_Change__c</fullName>
    <description>Datetime of the latest change to the portal status</description>
    <label>Portal status last change</label>
    <type>DateTime</type>
</CustomField>