force-app/main/default/objects/Account/fields/PortalAccountStatus__c.field-meta.xml
<CustomField>
    <fullName>PortalAccountStatus__c</fullName>
    <description>Business use: to understand the clients portal status. Shows if client has had their password link sent to them, if their link has expired, or if they have recieved the link and set their password successfully, or if they have been blocked. 
Tech use: Is set by the portal to indicate what their portal status is 
Data Inputters: System based on portal status
Data Users: Users looking to understand if client has a portal account</description>
    <label>Portal account status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Invite expired</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>