force-app/main/default/objects/Account/fields/PortalDocumentStatus__c.field-meta.xml
<CustomField>
    <fullName>PortalDocumentStatus__c</fullName>
    <description>Status of documentation for the household on the portal</description>
    <label>Portal document status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hidden</fullName>
                <default>true</default>
                <label>Hidden</label>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>