force-app/main/default/objects/Account/fields/PortalStatus__c.field-meta.xml
<CustomField>
    <fullName>PortalStatus__c</fullName>
    <description>Business use: used to accurately show the clients portal status through 1 field. If client has not migrated to cognito it shows their old portal status, but if they have it shows their new status 
Tech use: n/a
Data inputters: system/formula
Data users: All SF users</description>
    <formula>IF(ISPICKVAL(PortalAccountStatus__c, &quot;&quot;), TEXT( OW_Portal_Activated__c ), TEXT(PortalAccountStatus__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal status</label>
    <type>Text</type>
</CustomField>