force-app/main/default/objects/Account/fields/Power_of_Attorney_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_in_Place__c</fullName>
    <description>Specifies if the person / household has power of attorney in place</description>
    <label>Power of attorney in place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>