force-app/main/default/objects/Account/fields/Power_of_Attorney_Type__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_Type__c</fullName>
    <description>Specifies the type of power attorney the person / household has in place</description>
    <label>Power of attorney type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Types_of_Power_of_Attorney</valueSetName>
    </valueSet>
</CustomField>