force-app/main/default/objects/Account/fields/Power_of_Attorney_Types__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_Types__c</fullName>
    <description>Specifies the types of power of attorney the person / household has in place</description>
    <label>Power of attorney types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Types_of_Power_of_Attorney</valueSetName>
    </valueSet>
</CustomField>