force-app/main/default/objects/Account/fields/Prefered_contact_method__c.field-meta.xml
<CustomField>
    <fullName>Prefered_contact_method__c</fullName>
    <label>Preferred contact method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>