force-app/main/default/objects/Account/fields/Profile_Status__c.field-meta.xml
<CustomField>
    <fullName>Profile_Status__c</fullName>
    <description>Current status of the profile</description>
    <label>Profile status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update Required</fullName>
                <default>true</default>
                <label>Update Required</label>
            </value>
            <value>
                <fullName>Sent to Client(s)</fullName>
            </value>
            <value>
                <fullName>Updated by Client (Validations Outstanding)</fullName>
            </value>
            <value>
                <fullName>Completed by Client (Validations Outstanding)</fullName>
            </value>
            <value>
                <fullName>Up-to-date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>