force-app/main/default/objects/Account/fields/Reason_for_Vulnerability__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Vulnerability__c</fullName>
    <label>Reason for Vulnerability</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>