force-app/main/default/objects/Account/fields/Recent_Windfalls_Inheritance__c.field-meta.xml
<CustomField>
    <fullName>Recent_Windfalls_Inheritance__c</fullName>
    <description>Notes on any recent windfalls or inheritance</description>
    <inlineHelpText>Within the last 10 years</inlineHelpText>
    <label>Recent windfalls / inheritance</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>