force-app/main/default/objects/Account/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field captures the referrer. It is a lookup to the account where we store various types of referrer like people (clients, colleagues, or introducers) and businesses. Maps to an equivalent field on the lead.</description>
    <inlineHelpText>The client, colleague, introducer, or business that made the referral.</inlineHelpText>
    <label>Referrer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be a colleague, person, or business.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PersonAccount, OW_business, Colleague</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referred accounts</relationshipLabel>
    <relationshipName>ReferredAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>