force-app/main/default/objects/Account/fields/Rent_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Rent_Frequency__c</fullName>
    <description>The frequency related to the rent value</description>
    <label>Rent frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>