force-app/main/default/objects/Account/fields/RentMonthly__c.field-meta.xml
<CustomField>
    <fullName>RentMonthly__c</fullName>
    <description>Takes rent spending at any frequency and returns monthly spending</description>
    <formula>IF( ISPICKVAL(Rent_Frequency__c, &quot;Weekly&quot;),  52*Rent__c/12, IF(ISPICKVAL(Rent_Frequency__c, &quot;Monthly&quot;), Rent__c,
IF(ISPICKVAL(Rent_Frequency__c, &quot;Annually&quot;), Rent__c/12,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rent (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>