force-app/main/default/objects/Account/fields/Retirement_Target__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Target__c</fullName>
    <description>Retirement target age</description>
    <label>Retirement target</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>