force-app/main/default/objects/Account/fields/Risk_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score_Date__c</fullName>
    <description>Date that the risk score was calculated</description>
    <label>Risk score date</label>
    <type>Date</type>
</CustomField>