force-app/main/default/objects/Account/fields/Scope_Signed_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Scope_Signed_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is only used in the process for terms of business being signed and the discovery meeting being listened to. When terms are signed, I need a way of telling if the discovery meeting has already been listened to. If it has, this field will contain the Opportunity ID.</description>
    <label>Scope signed opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Scope Signed Opportunity on Account</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>