force-app/main/default/objects/Account/fields/SecondaryContact__c.field-meta.xml
<CustomField>
    <fullName>SecondaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business use: Stores the second client in a household to use for easy lookup when needed.
Tech use: Stores the person account of a household  where role on the related account contact relationship is client and the primary contact is unchecked. Updated via account contact relationship after save flow.</description>
    <label>Secondary contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Secondary contact</relationshipLabel>
    <relationshipName>SecondaryContact</relationshipName>
    <type>Lookup</type>
</CustomField>