force-app/main/default/objects/Account/fields/Seen_by_Partner__c.field-meta.xml
<CustomField>
    <fullName>Seen_by_Partner__c</fullName>
    <description>This information is important for the AML process.</description>
    <inlineHelpText>Choose the way in which the client was met, or if they have not.</inlineHelpText>
    <label>Seen by Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
                <label>Video (camera on)</label>
            </value>
            <value>
                <fullName>Video (camera off)</fullName>
            </value>
            <value>
                <fullName>Never Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>