force-app/main/default/objects/Account/fields/SenT_Portal_Registration_Email__c.field-meta.xml
<CustomField>
    <fullName>SenT_Portal_Registration_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Register if Sent the portal registration email to clients (Task)</description>
    <label>Sent portal registration email</label>
    <type>Checkbox</type>
</CustomField>