force-app/main/default/objects/Account/fields/SplitIds__c.field-meta.xml
<CustomField>
    <fullName>SplitIds__c</fullName>
    <description>This field serves a technical purpose, capturing IDs of contacts that should be added to this household as their primary group when they are pulled out of their original household. The list of IDs should be comma separated.</description>
    <label>Split IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>