force-app/main/default/objects/Account/fields/Started_Sign_up__c.field-meta.xml
<CustomField>
    <fullName>Started_Sign_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the sign up process has been started</description>
    <label>Started sign-up</label>
    <type>Checkbox</type>
</CustomField>