force-app/main/default/objects/Account/fields/StatusDisplay__c.field-meta.xml
<CustomField>
    <fullName>StatusDisplay__c</fullName>
    <description>This formula field combines the status and sub-status, 2 separate fields, into a single value for display purposes. Often the sub-status will be blank so we don&#39;t want to show that field on pages or highlights panels where it&#39;s not necessary. As these fields should only be controlled by automation too, it allows us to remove the potentially editable fields from page views.</description>
    <formula>TEXT(FinServ__Status__c) + IF(ISPICKVAL(OW_sub_status__c, &quot;&quot;), &quot;&quot;, &quot; | &quot; + TEXT(OW_sub_status__c))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>