force-app/main/default/objects/Account/fields/Subsegment__c.field-meta.xml
<CustomField>
    <fullName>Subsegment__c</fullName>
    <description>Subsegment of the household / person. Controlled by segment field</description>
    <label>Sub-segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>CoreSegment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No sub-segment</fullName>
            </value>
            <value>
                <fullName>Products in Trust (+ requirements to work with Trustees etc.)</fullName>
            </value>
            <value>
                <fullName>Power of attorney in place</fullName>
            </value>
            <value>
                <fullName>Business owners - with no future exit or sale expected</fullName>
            </value>
            <value>
                <fullName>Business owners - with future exit planned, or exit taking place</fullName>
            </value>
            <value>
                <fullName>Ultra-high net worth</fullName>
            </value>
            <value>
                <fullName>Vulnerable customers</fullName>
            </value>
            <value>
                <fullName>Conflict of interest customers</fullName>
            </value>
            <value>
                <fullName>No Capacity for Loss</fullName>
            </value>
            <value>
                <fullName>DB Transfer Advice</fullName>
            </value>
            <value>
                <fullName>Nova employee / staff member</fullName>
            </value>
            <value>
                <fullName>Early adopter</fullName>
            </value>
            <value>
                <fullName>Ex-SH reduced</fullName>
            </value>
            <value>
                <fullName>When they have JISAs that become ISAs, or JSIPPs that become SIPPs</fullName>
                <isActive>false</isActive>
                <label>When they have JISAs that become ISAs, or JSIPPs that become SIPPs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>