force-app/main/default/objects/Account/fields/TEMP_DeletedOldNotesStoredElsewhere__c.field-meta.xml
<CustomField>
    <fullName>TEMP_DeletedOldNotesStoredElsewhere__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added as part of Facts migration exercise.</description>
    <inlineHelpText>Tick this box when you have gone through old notes or facts stored anywhere outside of Salesforce, carried all relevant information across to facts, and deleted old notes.</inlineHelpText>
    <label>Deleted old notes stored elsewhere</label>
    <type>Checkbox</type>
</CustomField>