force-app/main/default/objects/Account/fields/TEMP_DiscoNotesAddedToFacts__c.field-meta.xml
<CustomField>
    <fullName>TEMP_DiscoNotesAddedToFacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added as part of Facts migration exercise.</description>
    <inlineHelpText>Tick this box when you have gone through all disco notes and added any relevant info into the household facts.</inlineHelpText>
    <label>Disco Notes Added to Facts</label>
    <type>Checkbox</type>
</CustomField>