force-app/main/default/objects/Account/fields/TEMP_Im_Sipp_Household__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Im_Sipp_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field added to assist with the migration of IM SIPPs to Hubwise SIPPs.</description>
    <label>IM SIPP transfer household</label>
    <type>Checkbox</type>
</CustomField>