force-app/main/default/objects/Account/fields/TEMP_MobileBefore__c.field-meta.xml
<CustomField>
    <fullName>TEMP_MobileBefore__c</fullName>
    <description>Temporary field to capture the mobile number before bulk updates were made to format so comparison can be made between new and old values.</description>
    <label>Mobile (before)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>