force-app/main/default/objects/Account/fields/TEMP_OldChattersAddedToFacts__c.field-meta.xml
<CustomField>
    <fullName>TEMP_OldChattersAddedToFacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added as part of facts migration exercise</description>
    <inlineHelpText>Tick this box when you have gone through all old chatters on household, people, advice records and added relevant info to facts</inlineHelpText>
    <label>Old chatters added to facts</label>
    <type>Checkbox</type>
</CustomField>