force-app/main/default/objects/Account/fields/TEMP_PhoneBefore__c.field-meta.xml
<CustomField>
    <fullName>TEMP_PhoneBefore__c</fullName>
    <description>Temporary field to capture the phone number before bulk updates were made to format so comparison can be made between new and old values.</description>
    <label>Phone (before)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>