force-app/main/default/objects/Account/fields/TEMP_ProcessStDebriefsAddedToFacts__c.field-meta.xml
<CustomField>
    <fullName>TEMP_ProcessStDebriefsAddedToFacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added as part of Facts migration exercise.</description>
    <inlineHelpText>Tick this box when you have reviewed the advice meeting debeifs from process street and added any relevant information into facts.</inlineHelpText>
    <label>Process st debriefs added to facts</label>
    <type>Checkbox</type>
</CustomField>