force-app/main/default/objects/Account/fields/TEMP_ProfileReviewed__c.field-meta.xml
<CustomField>
    <fullName>TEMP_ProfileReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added as part of Facts migration exercise.</description>
    <inlineHelpText>Tick this box when you have reviewed the profile and ensured info is up to date.</inlineHelpText>
    <label>Profile Reviewed</label>
    <type>Checkbox</type>
</CustomField>