force-app/main/default/objects/Account/fields/TEMP_RecentEmailsReviewedAddedtoFacts__c.field-meta.xml
<CustomField>
    <fullName>TEMP_RecentEmailsReviewedAddedtoFacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added as part of Facts migration exercise.</description>
    <inlineHelpText>Tick this box when you have reviewed your recent emails from this client and added all relevant information to facts</inlineHelpText>
    <label>Recent Emails Reviewed &amp; Added to Facts</label>
    <type>Checkbox</type>
</CustomField>