force-app/main/default/objects/Account/fields/TEMP_RiskCallNotesAddedToFacts__c.field-meta.xml
<CustomField>
    <fullName>TEMP_RiskCallNotesAddedToFacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added as part of Facts migration exercise.</description>
    <inlineHelpText>Tick this box when you have gone through all risk call notes and added any relevant information to Facts.</inlineHelpText>
    <label>Risk call notes added to facts</label>
    <type>Checkbox</type>
</CustomField>