force-app/main/default/objects/Account/fields/Temp_StatusChecked__c.field-meta.xml
<CustomField>
    <fullName>Temp_StatusChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the status of the person / household has been checked</description>
    <label>Status checked</label>
    <type>Checkbox</type>
</CustomField>