force-app/main/default/objects/Account/fields/TempBankDetailIssues__c.field-meta.xml
<CustomField>
    <fullName>TempBankDetailIssues__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field to indicate whether this account is currently outside of bank account rules</description>
    <label>TEMP bank detail issues</label>
    <type>Checkbox</type>
</CustomField>