force-app/main/default/objects/Account/fields/Terms_of_Business_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Business_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The box will be checked if one client of this household has accepted terms of business. This is used in the Send what next email workflow to prevent further tasks being generated when the additional members of the household accept terms.</description>
    <label>zUnused - Terms of Business Accepted</label>
    <type>Checkbox</type>
</CustomField>