force-app/main/default/objects/Account/fields/TestId__c.field-meta.xml
<CustomField>
    <fullName>TestId__c</fullName>
    <description>A unique ID that can be used in test classes to establish references to data. Not intended for any production use case.</description>
    <externalId>true</externalId>
    <inlineHelpText>Do not use in production.</inlineHelpText>
    <label>Test ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>