force-app/main/default/objects/Account/fields/Trigger_Auto_Portal_Activation_Email__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Auto_Portal_Activation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this will send an outbound post to the endpoint that triggers the Portal Email</description>
    <label>Trigger - Auto-Portal Activation Email</label>
    <type>Checkbox</type>
</CustomField>