force-app/main/default/objects/Account/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <description>Marketing tracking field to capture campaign</description>
    <label>utm_campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>