force-app/main/default/objects/Account/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <description>Marketing tracking field to capture medium of lead came through</description>
    <label>utm_medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>